                          [The qDecoder Project]
  ------------------------------------------------------------------------

qDecoder Changes

   ``FIX'', ``NEW'', ``REP'' and ``REM'' are stand on ``Fixed or Modified'', ``New'',
   ``Replaced'' and ``Removed''.
     * Release 9.0.3
          + NEW) Modified autoconf script and source codes to support FastCGI.
     * Release 9.0.2
          + FIX) large file problems. (changing some size_t type to off_t type)
          + FIX) fixed up shared library building problem on FreeBSD AMD 64 machine.
     * Release 9.0.1
          + FIX) qCgiRequestParseQueries() - quoted boundary patch. (by Hidai Kenichi)
          + NEW) qStrUnchar() - remove character from head and tail of the string.
          + NEW) qDecoderVersion() - get the version string of qDecoder library.
          + FIX) minor fixes related packaging.
     * Release 9.0
          + This is new branch of qDecoder.
          + qDecoder 9.0 does not support lower version compatibility any more.
          + Distributed under BSD-like License.
     * Release 8.0
          + NEW) qDecoderSetUploadBase() - Initialize qDecoder() for progressive
            uploading.
          + FIX) qDecoder() - Now qDecoder() supports progressive uploading and direct
            file saving into disk.
          + NEW) qSedArgAddDirect() - For huge size(over 1024 - 1) value.
     * Release 7.1.1
          + FIX) qSedArgAdd() - Adjust miss typed variable length. (1024*64 => 1024)
     * Release 7.1
          + NEW) qGetTimeStr() - Generate date string formatted as 'YYYYMMDDhhmmss'.
          + NEW) qJavaScript() - Print out some JavaScript code.
          + NEW) qAwkStr() - Scanning pattern from string.
          + FIX) qAwkOpen() - Compatibility increment
          + FIX) qAwkNext() - Expand array size to 1024(before 256)
          + FIX) qCountRead() - Compatibility increment
          + FIX) qCountSave() - Compatibility increment